example/secondfile/objects/DHStatus_BMP_Pre_Service__c.object
<CustomObject>
    <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Psat Ds1 Test Summary-BMP Pre Service</description>
    <fields>
        <fullName>Access_End__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Psat Ds1 Test Summary-BMP Pre Service</description>
        <label>Access End</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cleanup_Code__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Psat Ds1 Test Summary-BMP Pre Service</description>
        <label>Cleanup Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Psat Ds1 Test Summary-BMP Pre Service</description>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Condition_Code__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Psat Ds1 Test Summary-BMP Pre Service</description>
        <label>Condition Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_Testing_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Psat Ds1 Test Summary-BMP Pre Service-DHStatus-Testing Details</description>
        <label>DHStatus-Testing Details</label>
        <referenceTo>DHStatus_Testing_Details__c</referenceTo>
        <relationshipLabel>DHStatus-BMP Pre Service</relationshipLabel>
        <relationshipName>DHStatus_BMP_Pre_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Result_Type__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Psat Ds1 Test Summary-BMP Pre Service</description>
        <label>Result Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Type__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Psat Ds1 Test Summary-BMP Pre Service</description>
        <label>Test Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-BMP Pre Service</label>
    <nameField>
        <displayFormat>BMP-{0000}</displayFormat>
        <label>DHStatus-BMP Pre Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-BMP Pre Service</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>